yamls/test_iptables.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ss
  labels:
    app: ss
spec:
  restartPolicy: Never
  containers:
    - name: nginx
      image: nginx:1.18-alpine
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ss
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:  #service通过selector和pod建立关联
    app: ss
