yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: prod.virtuallain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingressgateway
                port:
                  number: 80
