yamls/test_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodapi
  namespace: myistio
spec:
  selector:
    matchLabels:
      app: prod
  replicas: 1
  template:
    metadata:
      labels:
        app: prod
        version: v1
    spec:
      containers:
        - name: prod
          image: docker.io/shenyisyn/prod:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prodsvc
  namespace: myistio
  labels:
    app: prod
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: prod
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prod-gateway
  namespace: myistio
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prod.virtuallain.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodvs
  namespace: myistio
spec:
  hosts:
    - prod.virtuallain.com
  gateways:
    - prod-gateway
    - mesh
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: prodsvc
            port:
              number: 8080
